add compare complete interface
